# betterprocs

./: Cargo.toml  README.md  betterprocs.yaml.example
src/: app.rs  main.rs
src/config/: cli.rs  merged.rs  mod.rs  npm.rs  yaml.rs
src/port/: detector.rs  mod.rs  parser.rs
src/process/: handle.rs  manager.rs  mod.rs  signal.rs  types.rs
src/system/: browser.rs  killer.rs  mod.rs
src/terminal/: copy_mode.rs  mod.rs  screen.rs
src/tui/: actions.rs  input.rs  mod.rs  renderer.rs
src/tui/widgets/: mod.rs
