[package]
name = "betterprocs"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
anyhow = "1"
arboard = "3"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
